docker can be released